--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="utf-8">
         <title>A Teddy's Jungo Life</title>
-        <!--link href="//fonts.googleapis.com/css?family=Lemon" rel="stylesheet" type="text/css">
+        <link href="//fonts.googleapis.com/css?family=Lemon" rel="stylesheet" type="text/css">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <link href="//djangogirlstaipei.github.io/assets/css/style.css" rel="stylesheet" type="text/css"-->
+        <link href="//djangogirlstaipei.github.io/assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="header">
