--- a/mysite/templates/post.html
+++ b/mysite/templates/post.html
@@ -18,7 +18,7 @@
     <div class="container post post-detail">
         <div class="post-heading">
             <h1 class="title">{{ post.title }}</h1>
-            <div class="date">{{ post.created_at|date:' m/ d/ Y' }}</div>
+            <div class="date">{{ post.created_date|date:' m/ d/ Y' }}</div>
         </div>
         <div class="post-content">
             {{ post.content }}
