--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -33,6 +33,9 @@
     <body>
         <div class="page-header">
             <h1>
+                {% if user.is_authenticated %}
+                <a href= "{% url 'post_new'%}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                {% endif %}
                 <a href="/">A Teddy's Jungo Life</a>
             </h1>
         </div>
@@ -49,6 +52,7 @@
                     {% if post.photo %}
                     <div>
                         <img src="{{post.photo}}" alt="{{ post.title }}" width="350px" height="250px">
+                        <!--iframe width="350px" height="250px" src="{{post.photo}}" frameborder="0" allowfullscreen></iframe-->                        
                     </div>
                     {% else %}
                     <div></div>
